Experiment with Dotbot shell commands
Create a test.sh file
chmod +x to run
Learn extended format stdout and stdin

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,11 +5,13 @@
 - clean: ['~']
 
 - link:
-    ~/.zshrc: zshrc
-
+    ~/.zshrc:
+    ~/.gitconfig: 
 - create:
-    - ~/Work
-    - ~/hey/you
 
 - shell:
-  - [git submodule update --init --recursive, Installing submodules]
+#  - [git submodule update --init --recursive, Installing submodules]
+    - 
+      command: ./test.sh
+      stdout: true
+      stderr: true
