Add setup_homebrew.sh to dotbot
Install homebrew, packages and apps:
>bat
>visual-studio-code
>google-chrome

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,6 @@
 - shell:
 #  - [git submodule update --init --recursive, Installing submodules]
     - 
-      command: ./test.sh
+      command: ./setup_homebrew.sh
       stdout: true
       stderr: true
