--- a/config/bat/config
+++ b/config/bat/config
@@ -23,3 +23,6 @@
 #   Example 2: Use ".gitignore"-style highlighting for ".ignore" files
 #--map-syntax "*.ino:C++"
 #--map-syntax ".ignore:Git Ignore"
+--map-syntax "zsh*:Bourne Again Shell (bash)"
+--map-syntax "Brewfile:Bourne Again Shell (bash)"
+
